# Deep_learning_project

./: .gitignore  README.md  pyproject.toml
Brain Tumor Classification/: Brain_Tumor_CNN.ipynb  Brain_Tumor_Classification.ipynb
