[tool.poetry]
name = "deep-learning-project"
version = "0.1.0"
description = "\"Academic project on deep learning\""
authors = ["RIAUX <adrien.riaux@efrei.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.1.2"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
h5py = "^3.10.0"
opencv-python = "^4.8.1.78"
tensorflow = "^2.12.0"
tensorflow-datasets = "^4.9.2"
tensorflow-hub = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
